# cose394-docent-chatbot-prototype

./: .eslintrc.json  .gitignore  LICENSE  README.md  docker-compose.yaml  jest.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yaml
__test__/: page.test.js
app/: constants.ts  globals.css  layout.tsx  page.tsx
app/api/[placeId]/artwork/: route.ts
app/api/[placeId]/path/: route.ts
app/api/[placeId]/path/[pathId]/: route.ts
app/api/place/: route.ts
app/onboard/: page.tsx
app/place/: page.tsx
app/place/[placeId]/: page.tsx
app/place/[placeId]/path/: page.tsx
backend/: pyproject.toml  setup.cfg
backend/docent/: __main__.py  constants.py
backend/docent/prompt/: the_starry_night.py
backend/docent/protocol/: dataplane.py
backend/docent/protocol/rest/: endpoints.py  server.py
chatbot/: chatBot.tsx
chatbot/model/: index.tsx  openAiModel.tsx
chatbot/prompt/: index.tsx
e2e/db/: setup.sql
lib/: constants.tsx  interfaces.tsx
lib/chatbot/: chatBot.test.tsx  chatBot.tsx  index.tsx
lib/chatbot/model/: dummyModel.tsx  openAiModel.tsx
lib/chatbot/prompt/: index.tsx
lib/db/: db.tsx  dbHandler.test.tsx  dbHandler.tsx  index.tsx  mysqlDb.tsx  postgresSqlDb.tsx
lib/voice/: index.tsx  types.ts
pages/: index.tsx  page.tsx
pages/api/: chat.tsx
pages/api/chat/: route.tsx
script/: build_sql.sh  create_table_query.sql  mysql_create_table_query.sql  postgres_create_table_query.sql  process_build_mysql_sql.js  process_build_postgres_sql.js  process_build_sql.js
(+8 files in other folders)
