[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["lee changsu <leecs0503@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.14"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
